# the_big_monorepo

./: README.md
FSharpPractice/: .gitignore  DATA AccessTokenResponseForAuthCode.txt  FSharpPractice.sln  TOKEN AccessTokenForAuthCode.txt  makefile
FSharpPractice/bkash_api/: Cargo.toml
FSharpPractice/bkash_api/bindings/csharp/: Interop.cs
FSharpPractice/bkash_api/src/: bkash.rs  lib.rs  main.rs
FSharpPractice/bkash_api/src/bkash/: prepare.rs
FSharpPractice/bkash_api/tests/: bindings.rs
blogger_laravel/: README.md  package-lock.json
blogger_laravel/app/: Category.php  Post.php
blogger_laravel/routes/: web.php
builder_pattern_rust/: Cargo.toml  README.md  makefile
builder_pattern_rust/src/: house.rs  main.rs
chatterbox/: Cargo.toml
chatterbox/client/: Cargo.toml
csv_to_snowflake/: .gitignore  Cargo.toml
csv_to_snowflake/src/: main.rs
dist_sys/: Cargo.toml  README.md
dist_sys/src/: init.rs  main.rs  types.rs  utils.rs  workloads.rs
gemini_api_playground/: .gitignore  Cargo.toml
gemini_api_playground/src/: appointment_confirmation.rs  basic_text.rs  main.rs
llm_crate_playground/: .gitignore  Cargo.toml  DEVICE_CONTROL.md  README.md
llm_crate_playground/grammars/: device_control.gbnf
llm_crate_playground/src/: main.rs
llms_from_scratch_workspace/: .gitignore  README.md
llms_from_scratch_workspace/attention_mechanism/: playground.ipynb  real_shit.ipynb
llms_from_scratch_workspace/basic_llm/: playground.ipynb  real_shit.ipynb
llms_from_scratch_workspace/basic_nn_appendix/: playground.ipynb
llms_from_scratch_workspace/fine_tuning/: playground.ipynb  test.csv  train.csv  validation.csv
llms_from_scratch_workspace/loading_pretrained_weights/: real_shit.ipynb
llms_from_scratch_workspace/pretraining/: playground.ipynb  real_shit.ipynb
nes_emu/: Cargo.toml
nes_emu/src/: cpu.rs  (+3 more)
pingpong/: Cargo.toml  Dockerfile  README.md  deploy.sh
pingpong/k8s/: pingpong-instance-a.yaml  pingpong-instance-b.yaml  pingpong-pinger.yaml  pingpong-ponger.yaml
pingpong/src/: main.rs
pylite_compiler/: .gitignore  Cargo.toml  README.md
pylite_compiler/compiler/src/: main.rs
pylite_compiler/compiler/src/parse/: lexer.rs  token.rs
rate_limiter/: Cargo.toml
terminal_alpha_beta/: .gitignore  .gitlab-ci.yml.bak  COMMANDS.md  Cargo.toml  README.md  build.rs  configuration.json.template  makefile
terminal_alpha_beta/data/: responses.json
terminal_alpha_beta/src/: clients.rs  configuration.rs  database.rs  handlers.rs  main.rs  repositories.rs  second_gen.rs  services.rs  util.rs
terminal_alpha_beta/src/clients/: discord.rs  shared_utils.rs  telegram.rs
terminal_alpha_beta/src/database/: mongo.rs
terminal_alpha_beta/src/handlers/: responses.rs
terminal_alpha_beta/src/repositories/: devices_repository.rs  notes_repository.rs
terminal_alpha_beta/src/second_gen/: intent.rs  user_life_cycle.rs
terminal_alpha_beta/src/second_gen/user_life_cycle/: user_action.rs  user_env.rs  user_remote_operations.rs  user_state.rs
terminal_alpha_beta/src/services/: notes_service.rs
terminal_alpha_beta/src/util/: choice_bias.rs  logger.rs  request.rs
tesseract_api/: Cargo.toml  Dockerfile  DockerfileRustImage.bak  docker-compose.yml
thing_state_analyzer/: .gitignore  Cargo.toml  ThingState.cs
thing_state_analyzer/src/: cli.rs  main.rs  thing_state.rs  utils.rs
thing_state_analyzer/src/thing_state/: composite_thing_state.rs  simple_thing_state.rs
(+50 files in other folders)
