[package]
name = "gemini_api_playground"
version = "0.1.0"
edition = "2021"

[dependencies]
gemini-rust = "1.5.1"
tokio = { version = "1.48", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
