[workspace]
resolver = "2"
members = [
    "compiler",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Raiyan Hossain <ryanhossain9797@gmail.com>"]
description = "A Rust workspace for my pylite compiler project"
license = "MIT"
readme = "README.md"

[workspace.dependencies]
# Add common dependencies here that can be shared across workspace members 