[package]
name = "terminal_alpha_beta"
version = "0.4.0"
authors = ["zireael9797 <ryanhossain9797@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'


[dependencies]
futures = "0.3"
async-std = { version = "1.12", features = ["tokio02", "tokio03", "tokio1", "attributes", "unstable"] }
frankenstein = { version = "0.20", default-features = false, features = ["async-http-client"] }
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "utils", "cache"] }
anyhow = "1.0"
async-trait = "0.1"
once_cell = "1.17"
dashmap = "5.4"
colored = "2.0"
regex = "1.7"
flume = "0.10"
rand = "0.8"
tap = "1.0"
reqwest = { version = "0.11", features = ["rustls-tls"] }
openssl = { version = "0.10", features = ["vendored"] }
closestmatch = "0.1"
mongodb = { version = "2.3", default-features = false, features = ["async-std-runtime"] }
serde = { version= "1.0", features = ["derive"] }
serde_json = "1.0"
serde-query = "0.1"
yeelib_rs = "0.1"