[package]
name = "thing_state_analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.10", features = ["tokio02", "tokio03", "tokio1", "attributes", "unstable"]}
anyhow = "1.0"
futures = "0.3"
regex = "1.5"
clap = { version = "3.0", features = ["derive"] }
colored = "2.0"