[package]
name = "bkash_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-std = { version = "1.12", features = ["tokio02", "tokio03", "tokio1", "attributes", "unstable"] }
interoptopus = "0.14"
interoptopus_backend_csharp = "0.14"
base64 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11"
anyhow = "1.0"
chrono = "0.4"
rustls = "0.20"